# agent-client-protocol

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  eslint.config.js  flake.nix  go.mod  methods.json  package-lock.json  package.json  pyproject.toml  rust-toolchain.toml  schema.json  tsconfig.json  typos.toml
.github/ISSUE_TEMPLATE/: 05_bug_report.yml  10_accepted_protocol_changes.yml  config.yml
.github/workflows/: ci.yml  publish.yml
.github/workflows/ISSUE_TEMPLATE/: 05_bug_report.yml  10_accepted_protocol_changes.yml  config.yml
docs/: README.md  architecture.mdx  astro.config.mjs  auth.mdx  docs.json  docs.json.mdx  faq.mdx  introduction.mdx  llm-turn.mdx  package-lock.json  package.json  pnpm-lock.yaml  prompt-turn.mdx  rust.mdx  specification.mdx  typography.ts  versioning.mdx
docs/.astro/: data-store.json  settings.json
docs/community/: contributing.mdx
docs/images/: mcp-proxy.d2  mcp.d2  server-client.d2
docs/libraries/: community.mdx  go.mdx  python.mdx  rust.mdx  typescript.mdx
docs/overview/: agent.mdx  agents.mdx  architecture.mdx  client.mdx  clients.mdx  introduction.mdx
docs/protocol/: agent-plan.mdx  agent-tools.mdx  authentication.mdx  client-tools.mdx  commands.mdx  content.mdx  error.mdx  extensibility.mdx  file-system.mdx  initialization.mdx  overview.mdx  prompt-turn.mdx  schema.mdx  session-modes.mdx  session-setup.mdx  terminals.mdx  tool-call.mdx  tool-calls.mdx
docs/src/app/: layout.tsx  not-found.tsx  page.mdx
docs/src/app/pagination/: page.mdx
docs/src/app/quickstart/: page.mdx
docs/src/components/: Button.tsx  Code.tsx  Feedback.tsx  Footer.tsx  Header.tsx  Heading.tsx  Layout.tsx  Logo.tsx  MobileNavigation.tsx  Navigation.tsx  Search.tsx  SectionProvider.tsx  Tag.tsx  ThemeToggle.tsx  mdx.tsx
docs/src/content/docs/: index.mdx
docs/src/mdx/: remark.mjs
docs/src/styles/: custom.css  tailwind.css
go/: README.md  acp_test.go  agent.go  agent_gen.go  client.go  client_gen.go  connection.go  constants_gen.go  defaults_test.go  errors.go  example_agent_test.go  example_client_test.go  example_gemini_test.go  go.mod  helpers.go  helpers_gen.go  json_parity_test.go  types.go  types_gen.go
go/cmd/generate/: go.mod  main.go
go/cmd/generate/internal/emit/: constants.go  dispatch.go  dispatch_helpers.go  doc.go  helpers.go  jenwrap.go  types.go
go/cmd/generate/internal/ir/: ir.go
go/cmd/generate/internal/load/: load.go
go/cmd/generate/internal/util/: util.go
go/example/agent/: main.go
go/example/claude-code/: main.go
go/example/client/: main.go
go/example/gemini/: main.go
go/testdata/json_golden/: cancel_notification.json  content_audio.json  content_image.json  content_resource_blob.json  content_resource_link.json  content_resource_text.json  content_text.json  fs_read_text_file_request.json  fs_read_text_file_response.json  fs_write_text_file_request.json  initialize_request.json  initialize_response.json  new_session_request.json  new_session_response.json  permission_outcome_cancelled.json  permission_outcome_selected.json  prompt_request.json  request_permission_request.json  request_permission_response_selected.json  session_update_agent_message_chunk.json  session_update_agent_thought_chunk.json  session_update_plan.json  session_update_tool_call.json  session_update_tool_call_edit.json  session_update_tool_call_locations_rawinput.json  session_update_tool_call_minimal.json  session_update_tool_call_read.json  session_update_tool_call_update_content.json  session_update_tool_call_update_minimal.json  session_update_tool_call_update_more_fields.json  session_update_user_message_chunk.json  tool_content_content_text.json  tool_content_diff.json  tool_content_diff_no_old.json  tool_content_terminal.json
kotlin/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/buildSrc/: build.gradle.kts  settings.gradle.kts
kotlin/buildSrc/src/main/kotlin/: acp.multiplatform.gradle.kts  acp.publishing.gradle.kts
kotlin/gradle/: libs.versions.toml
kotlin/kotlin-acp/: build.gradle.kts
kotlin/kotlin-acp/api/: kotlin-acp-core.api
kotlin/kotlin-acp/src/commonMain/kotlin/io/agentclientprotocol/agent/: Agent.kt  AgentSideConnection.kt
kotlin/kotlin-acp/src/commonMain/kotlin/io/agentclientprotocol/client/: Client.kt  ClientSideConnection.kt
kotlin/kotlin-acp/src/commonTest/kotlin/io/agentclientprotocol/: ClientSideConnectionTest.kt  SimpleConnectionTest.kt
kotlin/samples/kotlin-acp-client-sample/: README.md  build.gradle.kts
kotlin/scripts/: gen-kotlin.mjs
kotlin/src/main/kotlin/: Main.kt
kotlin/src/main/kotlin/client/: Agent.kt  AgentSideConnection.kt  Client.kt  ClientSideConnection.kt  TerminalHandle.kt
kotlin/src/main/kotlin/schema/: Meta.kt  Schema.kt
kotlin/src/main/kotlin/transport/: Connection.kt  Errors.kt  JsonRpc.kt  RequestError.kt
kotlin/src/main/kotlin/util/: Json.kt
python/: __init__.py  acp.py  conftest.py  generate.py  pyproject.toml  schema.py
python/agent_client_protocol/: __init__.py  acp.py  acp_test.py  generate.py  schema.py
python/examples/: agent.py  client.py  duet.py
python/scripts/: __init__.py  gen_all.py  gen_meta.py  gen_schema.py
python/src/acp/: __init__.py  core.py  meta.py  schema.py  stdio.py
python/tests/: test_rpc.py
rust/: README.md  acp.rs  acp_tests.rs  agent.rs  client.rs  connection.rs  content.rs  error.rs  example_agent.rs  example_client.rs  example_server.rs  ext.rs  generate.rs  markdown_generator.rs  mcp_types.rs  plan.rs  rpc.rs  rpc_tests.rs  schema.rs  schema_metadata.rs  stream_broadcast.rs  tool_call.rs  version.rs
rust/examples/: agent.rs  client.rs
rust/schema/: methods.json  schema.json
schema/: agent-methods.json  client-methods.json  meta.json  methods.json  schema.json
scripts/: spellcheck.sh
typescript/: README.md  acp.test.ts  acp.ts  generate.js  jsonrpc.ts  schema.ts  typedoc-theme.css  typedoc.json  zod.ts
typescript/examples/: README.md  agent.ts  client.ts
(+27 files in other folders)
