[project]
name = "agent_client_protocol"
version = "0.0.1"
description = "A protocol for standardizing communication between code editors and AI coding agents"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.MIT"]
authors = [{ name = "Zed Industries" }]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
]

[project.urls]
repository = "https://github.com/zed-industries/agent-client-protocol"
issues = "https://github.com/zed-industries/agent-client-protocol/issues"

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ts2python>=0.7.6",
]

[tool.uv.sources]
ts2python = { git = "https://github.com/mgsloan/ts2python", rev = "3a5dbf5ce6e1128474492027a6a49f101753c5b7" }
# ts2python = { path = "../../../oss/ts2python", editable = true }
